--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,318 @@
+@font-face {
+  font-family: yekan;
+  src: url(../fonts/Yekan.woff2);
+}
+body, html{
+  margin: 0;
+  padding: 0;
+  /* overflow-x: hidden; */
+  scroll-behavior: smooth;
+  font-family: yekan;
+}
 
+header{
+width: 100%;
+height: fit-content;
+display: flex;
+align-items: center;
+}
+.logo {
+  /* margin: 20px auto 0 30px; */
+  display: flex;
+  align-items: center;
+  flex-basis: 30%;
+  width: 150px;
+}
+.logo-desktop {
+align-items: center;
+flex-basis: 10%;
+width: 150px;
+display: none;
+}
+.navbar-desktop{
+display: none;
+}
+.logo p {
+font-family: yekan;
+font-weight: bold;
+font-size: 20px;
+}
+.logo img {
+width: 30%;
+height: 50%;
+}
+.label-hamberger{
+font-size: 1.5rem;
+}
+.hamberger{
+align-self: center;
+flex-basis: 70%;
+margin-right: 1rem;
+}
+.container-header-mobile{
+/* z-index: 401; */
+}
+.leaflet-control-attribution {
+display: none !important;
+}
+
+.container-navbar-mobile{
+display: flex;
+}
+.container-header-desktop{
+display: none;
+}
+.header-mobile{
+display: flex;
+}
+.nav {
+margin: 17px 30px 0;
+position: relative;
+width: 580px;
+height: 50px;
+background-color: #ffffff;
+border-radius: 8px;
+font-size: 0;
+}
+.navber-mobile{
+background-color: #cecece;
+flex-direction: column;
+display: flex;
+position: absolute;
+right: 0;
+z-index: 1;
+align-items: flex-start;
+}
+.close{
+align-self: end;
+padding-left: 1rem;
+}
+.navbar-mobile-link{
+text-align: right;
+padding: 0 1rem;
+}
+.d-none{
+display: none;
+}
+#checkbox-hamberger:checked .container-navbar-mobile{
+display: block;
+}
+#filters {
+position: absolute;
+top: 10px;
+right: 10px;
+/* background: rgba(255, 255, 255, 0.9); */
+padding: 10px;
+/* border-radius: 10px;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); */
+display: flex;
+flex-direction: row;
+gap: 8px;
+z-index: 400;
+flex-wrap: wrap;
+
+}
+.filter-btn {
+background: white;
+border: 2px solid #ccc;
+padding: 6px 12px;
+border-radius: 20px;
+cursor: pointer;
+font-size: 14px;
+text-align: right;
+font-family: inherit;
+}
+
+.filter-btn:hover {
+background: #cecece;
+color: #000;
+border: 2px solid #000;
+}
+.filter-dropdown{
+font-family: inherit;
+border: 2px solid #ccc;
+padding: 6px 12px;
+border-radius: 20px;
+cursor: pointer;
+font-size: 14px;
+}
+#checkbox-hamberger{
+display: none;
+}
+#background-img{
+background: url(../image/13_mashhad_360.jpg);
+height: 100vh;
+width: 100%;
+position: relative;
+background-size: cover;
+background-position: bottom;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.search{
+margin-right: 0rem;
+}
+.guide{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #cecece;
+  height: 100vh;
+}
+.guide-link{
+color: #000;
+}
+a{
+text-decoration: none;
+}
+@media only screen and (width < 300px){
+header{
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+}  
+}
+@media only screen and (width >= 1000px){
+.container-header-mobile{
+    display: none;
+}
+.logo-desktop{
+  display: flex;
+}
+.navbar-desktop{
+  margin: 17px 30px 0;
+}
+.logo-desktop p {
+  font-family: yekan;
+  font-weight: bold;
+  font-size: 20px;
+}
+.logo-desktop img {
+  width: 30%;
+  height: 50%;
+}
+.container-header-desktop{
+  display: flex;
+  justify-content: space-evenly;
+  flex-basis: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 401;
+  background-color: white;
+  width: 100%;
+
+}
+.search{
+  margin-right: 10rem;
+}
+.guide{
+  flex-direction: row;
+
+}
+#filters{
+  top: 6rem;
+}
+}
+nav a {
+  line-height: 50px;
+  height: 100%;
+  font-family: yekan;
+  font-size: 15px;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+}
+nav .animation {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: 0;
+  transition: all .5s ease 0s;
+  border-radius: 8px;
+}
+a:nth-child(1) {
+  width: 80px;
+}
+a:nth-child(2) {
+  width: 150px;
+}
+a:nth-child(3) {
+  width: 140px;
+}
+a:nth-child(4) {
+  width: 90px;
+}
+a:nth-child(5) {
+  width: 90px;
+}
+nav .start-home, a:nth-child(1):hover~.animation {
+  width: 80px;
+  right: 0;
+  background-color: #cecece;
+}
+nav .start-about, a:nth-child(2):hover~.animation {
+  width: 140px;
+  right: 85px;
+  background-color: #cecece;
+}
+nav .start-blog, a:nth-child(3):hover~.animation {
+  width: 140px;
+  right: 230px;
+  background-color: #cecece;
+}
+nav .start-portefolio, a:nth-child(4):hover~.animation {
+  width: 75px;
+  right: 377px;
+  background-color: #cecece;
+}
+nav .start-contact, a:nth-child(5):hover~.animation {
+  width: 90px;
+  right: 462px;
+  background-color: #cecece;
+}
+
+
+.link-start{
+  text-align: center;
+  font-family: yekan;
+  text-decoration: none;
+  color: #000;
+}
+.start{
+background-color: #cecece;
+border: none;
+border-radius: 10px;
+padding: 6px 12px;
+}
+.options{
+text-align: center;
+}
+section{
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+}
+.container-map{
+position: relative;
+}
+/* استایل نقشه */
+#map {
+width: 100%;
+height: 100vh;
+background-color: #cecece;
+}
+
+/* فیلترها (پنهان به‌صورت پیش‌فرض) */
+.filter-btn.active {
+background-color: #000;
+color: #fff;
+border-color: #000;
+}
